# nrf52840_shell

./: CMakeLists.txt  Kconfig  app.overlay  prj.conf
boards/: nrf52840dk_nrf52840.overlay
dts/bindings/: nxp,pn7160.yaml  nxp,sr1xx.yaml
patches/: 0002-pwm-nrfx-resume-load-zero-duty.patch  README.md
patches/RS485/: Kconfig.backends  shell_uart.c
src/: main.c
src/buzzer/: buzzer.c  buzzer.h
src/cmd/: cmd.c
src/dtm/: dtm.c  dtm.h  dtm_sem.h
src/dtm/transport/: dtm_hci.c  dtm_uart_twowire.c  dtm_uart_wait.c  hci_uart.c
src/em4095/: em4095.c  em4095.h  em4095_sem.h
src/pn7160/: nfc_task.c  nfc_thread.c
src/pn7160/NfcLibrary_NCI2.0/NdefLibrary/src/: P2P_NDEF.c
src/pn7160/NfcLibrary_NCI2.0/NxpNci20/src/: NxpNci20.c
src/pn7160/TML/inc/: tml.h
src/pn7160/TML/src/: tml.c
src/pn7160/board/inc/: driver_config.h
src/radio_test/: radio_cmd.c  radio_main.c  radio_sem.h  radio_test.c  radio_test.h
src/uwb/boards/Host/Rhodes4/: UWBT_BuildConfig.h  UWBT_PowerMode.h  UWB_Assert.h  UWB_DeviceConfig.h  UWB_DeviceConfig_SR1XX.h  UWB_DeviceConfig_SR1XX_senao.h  UWB_GPIOExtender.h  driver_config.h  uwb_board.h
src/uwb/boards/Rhodes4_SPI/: app_preinclude.h  board.h  uwb_bus_board.h  uwb_bus_interface.c  uwb_bus_io.c
src/uwb/common/: AppCallbacks.c  AppInternal.h  AppRecovery.c  AppRecovery.h  AppStateManagement.c  AppStateManagement.h  Demo_Common_Config.h  Utilities.h
src/uwb/demo_test_rx/: app_Test_Cfg_rx.h  demo_test_rx.c  demo_test_rx.h  demo_test_rx_sem.h
src/uwb/demo_test_tx/: app_Test_Cfg.h  demo_test_tx.c  demo_test_tx.h  demo_test_tx_sem.h
src/uwb/firmware_images/SR1XX/: Factory_Firmware.h  Mainline_Firmware.h
src/uwb/firmware_images/SR1XX/Prod_ROW/: H1_IOT.SR150_FACTORY_PROD_FW_46.41.06_0052bbfed983a1f1.h  H1_IOT.SR150_MAINLINE_PROD_FW_46.41.06_0052bbfed983a1f1.h
src/uwb/libs/halimpl/fwd/SR1XX/: phNxpUciHal_fwd.c  phNxpUciHal_fwd.h
src/uwb/libs/halimpl/fwdl_provider/: uwb_fwdl_ext.c  uwb_fwdl_ram.c
src/uwb/libs/halimpl/hal/: phNxpUciHal.c  phNxpUciHal_ext.c
src/uwb/libs/halimpl/inc/: UwbCoreSDK_Internal.h  nxAntennaDefine.h  nxEnsure.h  phNxpLogApis_UwbApi.h  phNxpUciHal.h  phNxpUciHal_Adaptation.h  phNxpUciHal_CoreConfig.h  phNxpUciHal_ext.h  phNxpUciHal_utils.h  phNxpUwbConfig.h  phOsalUwb.h  phOsalUwb_Internal.h  phOsalUwb_Queue.h  phOsalUwb_Thread.h  phOsalUwb_Timer.h  phTmlUwb.h  phTmlUwb_transport.h  phUwbCommon.h  phUwbErrorCodes.h  phUwbStatus.h  phUwbTypes.h  phUwb_BuildConfig.h  uwb_board_values.h  uwb_bus_interface.h  uwb_fwdl_provider.h  uwb_iot_ftr_default.h  uwb_uwbs_tml_interface.h  uwbiot_ver.h
src/uwb/libs/halimpl/osal/: phOsalUwb_Queue_zephyr.c  phOsalUwb_Timer_zephyr.c  phOsalUwb_thread_zephyr.c  phOsalUwb_zephyr.c
src/uwb/libs/halimpl/tml/: phTmlUwb.c  phTmlUwb_transport.c
src/uwb/libs/halimpl/transport/SPI/: phNxpUwb_Common.h
src/uwb/libs/halimpl/utils/: phNxpUciHal_utils.c  phNxpUwbConfig.c
src/uwb/libs/uci-core/inc/: uci_hmsgs.h  uci_test_defs.h  uwa_dm_int.h  uwa_sys.h  uwb_int.h  uwb_types.h
src/uwb/libs/uci-core/inc/SR1XX/: uci_ext_defs.h
src/uwb/libs/uci-core/src/: uci_hmsgs.c  uwa_dm_act.c  uwa_dm_api.c  uwa_dm_main.c  uwa_sys_main.c  uwb_main.c  uwb_task.c  uwb_ucif.c
src/uwb/libs/uni-core/inc/: uci_defs.h  uwa_api.h  uwb_int.h
src/uwb/libs/uwb-iot/uwb_api/Api/: PrintUtility.h  PrintUtility_RfTest.h  SE_Wrapper.h  StateMachine.h  UwbApi.c  UwbApi.h  UwbApi_Internal.c  UwbApi_Internal.h  UwbApi_Types.h  UwbApi_Types_RfTest.h  UwbApi_Utility.c  UwbApi_Utility.h  UwbSeApi.h
src/uwb/libs/uwb-iot/uwb_api/PrintUtility/: PrintUtility.c  (+1 more)
src/uwb/nxp_logic/: TLV_Builder.c  TLV_Mng.c  ble_server.c
src/uwb/nxp_logic/inc/: TLV_Types_i.h  UWBIOT_APP_BUILD.h  demo_device_config_i.h
src/uwb/se_mw/sss/inc/: fsl_sss_mbedtls_types.h
(+31 files in other folders)
